# rust-leptos-axum-project-template

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DEVELOPER_GUIDE.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  rust-toolchain.toml  tailwind.config.js
.github/workflows/: build.yml
app/: Cargo.toml
app/src/: api.rs  app.rs  lib.rs
app/src/pages/: app_layout.rs  auth.rs  dashboard.rs  home.rs  landing.rs  mod.rs  not_found.rs  profile.rs  settings.rs
frontend/: Cargo.toml
frontend/src/: lib.rs
scripts/: script.ps1  script.sh
server/: Cargo.toml
server/src/: api.rs  main.rs
style/: main.scss  src.css  tailwind-content-ref.html
