[package]
name = "server"
version = "0.1.0"
edition = "2021"
description = "Axum server with Leptos SSR and optional API routes"

[dependencies]
app = { path = "../app", default-features = false, features = ["ssr"] }

leptos.workspace = true
leptos_axum.workspace = true
axum.workspace = true
simple_logger.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
